[tool.poetry]
name = "gpu-dockerfile"
version = "0.1.0"
description = ""
authors = ["wmaucla <zhengweima@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
xgboost = "^2.1.1"
cupy-cuda12x = "^13.3.0"
cuml-cu12 = "^24.8.0"
scikit-learn = "^1.5.1"


[[tool.poetry.source]]
name = "nvidia-pypi"
url = "https://pypi.nvidia.com"
priority = "primary"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
